Updates ui and css
-on successful action, adds green color to user message
-on unsuccessful action, adds red color to user message

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -68,9 +68,11 @@ span {
 }
 
 .user-message {
+  font-size: 2rem;
   font-weight: bold;
   height: 2rem;
   margin: 0 auto;
+  padding: 10px;
   text-align: center;
   width: 50vw;
 }
