--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -30,7 +30,6 @@ span {
 
 .game {
   border: 1px solid black;
-  height: 20vh;
 
   &:hover {
     background: grey;
@@ -38,8 +37,8 @@ span {
 }
 
 .main {
-  height: 25vh;
-  width: 400px;
+  height: 15vh;
+  width: 30vw;
 }
 
 .player-o {
