--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -33,7 +33,7 @@ span {
   background-color: grey;
 }
 
-.game {
+.blank {
   background-color: white;
   border: 1px solid black;
 
@@ -42,8 +42,17 @@ span {
   }
 }
 
+.game {
+  padding: 0px;
+}
+
+.game-board {
+  justify-content: space-around;
+}
+
 .main {
-  height: 15vh;
+  height: 20vh;
+  padding: 0px;
   width: 30vw;
 }
 
@@ -65,6 +74,16 @@ span {
   .x {
     color: blue;
   }
+}
+
+.skier {
+  background-image: url('../../public/skier.png');
+  background-size: cover;
+}
+
+.snowboarder {
+  background-image: url('../../public/snowboarder.png');
+  background-size: cover;
 }
 
 .title,
