Adds class to user message on action success/failure
-Adds green color on Success
-Adds red color on failure

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -56,6 +56,15 @@ span {
   width: 30vw;
 }
 
+.message-failure {
+  color: red;
+  font-weight: bold;
+}
+
+.message-success {
+  color: green;
+}
+
 .player-o {
   border: 1px solid black;
   float: right;
