--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,6 +9,7 @@ aside {
 div {
   height: 100%;
   text-align: center;
+  color: black;
 }
 
 footer {
@@ -58,7 +59,6 @@ span {
 
 .message-failure {
   color: red;
-  font-weight: bold;
 }
 
 .message-success {
@@ -105,7 +105,6 @@ span {
   font-weight: bold;
   height: 2rem;
   margin: 0 auto;
-  padding: 10px;
   text-align: center;
   width: 50vw;
 }
