Updates image url in css file

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -65,13 +65,13 @@ span {
 }
 
 .skier {
-  background-image: url('../../public/skier.png');
+  background-image: url('public/skier.png');
   background-size: cover;
   border: 1px solid black;
 }
 
 .snowboarder {
-  background-image: url('../../public/snowboarder.png');
+  background-image: url('public/snowboarder.png');
   background-size: cover;
   border: 1px solid black;
 }
