Adds background image to body

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,6 +6,11 @@ aside {
   text-align: center;
 }
 
+body {
+  background: url('public/mountain-background-nice.jpg');
+  background-size: cover;
+}
+
 div {
   text-align: center;
   color: black;
