--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -11,7 +11,7 @@ body {
 }
 
 div {
-  color: #000000;
+  color: #000;
   text-align: center;
 }
 
@@ -19,8 +19,8 @@ footer {
   background-color: $clear-grey;
   border: 4px solid $off-white;
   border-radius: 8px;
-  height: 50px;
-  margin: 0 auto;
+  height: 10vh;
+  margin: 16px auto;
   width: 75%;
 
   &:hover {
