--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -75,7 +75,6 @@ section {
 }
 
 .game {
-  border-radius: 8px;
   height: 0;
   padding-bottom: 25%;
   width: 25%;
@@ -126,6 +125,40 @@ section {
   margin-top: 25%;
   text-align: center;
 }
+
+#index-0 {
+  border-right:
+  border-radius: 8px 8px 0;
+}
+
+#index-1 {
+  border-radius: 8px 8px 0 0;
+}
+
+#index-2 {
+  border-radius: 8px 8px 8px 0;
+}
+
+#index-3 {
+  border-radius: 8px 0 0 8px;
+}
+
+#index-5 {
+  border-radius: 0 8px 8px 0;
+}
+
+#index-6 {
+  border-radius: 8px 0 8px 8px;
+}
+
+#index-7 {
+  border-radius: 0 0 8px 8px;
+}
+
+#index-8 {
+  border-radius: 0 8px 8px;
+}
+
 @media (min-width: 575px) {
   .user-message {
     margin-top: 10%;
@@ -136,6 +169,7 @@ section {
     max-width: 60%;
   }
 }
+
 @media (min-width: 768px) {
   .user-message {
     margin-top: 5%;
@@ -146,6 +180,7 @@ section {
     max-width: 50%;
   }
 }
+
 @media (min-width: 992px) {
   .user-message {
     margin-top: 0;
