--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -56,10 +56,10 @@ section {
 }
 
 .blank {
-  border: 4px solid $off-white;
+  // border: 4px solid $off-white;
 
   &:hover {
-    opacity: 0.25;
+    opacity: .25;
   }
 }
 
@@ -100,13 +100,13 @@ section {
 .skier {
   background-image: url("public/skier.png");
   background-size: cover;
-  border: 4px solid $off-white;
+  // border: 4px solid $off-white;
 }
 
 .snowboarder {
   background-image: url("public/snowboarder.png");
   background-size: cover;
-  border: 4px solid $off-white;
+  // border: 4px solid $off-white;
 }
 
 .title {
@@ -127,36 +127,59 @@ section {
 }
 
 #index-0 {
-  border-right:
-  border-radius: 8px 8px 0;
+  border-right: 4px solid $off-white;
+  border-bottom: 4px solid $off-white;
+  // border-radius: 8px 8px 0;
 }
 
 #index-1 {
-  border-radius: 8px 8px 0 0;
+  border-bottom: 4px solid $off-white;
+  border-right: 4px solid $off-white;
+  border-left: 4px solid $off-white;
+  // border-radius: 8px 8px 0 0;
 }
 
 #index-2 {
-  border-radius: 8px 8px 8px 0;
+  border-left: 4px solid $off-white;
+  border-bottom: 4px solid $off-white;
+  // border-radius: 8px 8px 8px 0;
 }
 
 #index-3 {
-  border-radius: 8px 0 0 8px;
+  border-bottom: 4px solid $off-white;
+  border-right: 4px solid $off-white;
+  border-top: 4px solid $off-white;
+  // border-radius: 8px 0 0 8px;
+}
+
+#index-4 {
+  border: 4px solid $off-white;
 }
 
 #index-5 {
-  border-radius: 0 8px 8px 0;
+  border-bottom: 4px solid $off-white;
+  border-left: 4px solid $off-white;
+  border-top: 4px solid $off-white;
+  // border-radius: 0 8px 8px 0;
 }
 
 #index-6 {
-  border-radius: 8px 0 8px 8px;
+  border-right: 4px solid $off-white;
+  border-top: 4px solid $off-white;
+  // border-radius: 8px 0 8px 8px;
 }
 
 #index-7 {
-  border-radius: 0 0 8px 8px;
+  border-left: 4px solid $off-white;
+  border-right: 4px solid $off-white;
+  border-top: 4px solid $off-white;
+  // border-radius: 0 0 8px 8px;
 }
 
 #index-8 {
-  border-radius: 0 8px 8px;
+  border-left: 4px solid $off-white;
+  border-top: 4px solid $off-white;
+  // border-radius: 0 8px 8px;
 }
 
 @media (min-width: 575px) {
