Removes unused CSS

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -101,6 +101,10 @@ section {
   color: $success-green;
 }
 
+// .sign-in-dd {
+//   position: absolute;
+// }
+
 .skier {
   background-image: url("public/skier.png");
   background-size: cover;
